# agl-monitor

./: README.md  flake copy.nix  flake.nix  pyproject.toml
.direnv/: flake-profile-1-link
agl_monitor/agl_monitor/: settings.py
agl_monitor/agl_monitor/settings_base/: celery.py
