[tool.poetry]
name = "agl-monitor"
version = "0.1.0"
description = ""
authors = ["maddonix <tlux14@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "~4.2"
gunicorn = "^21.2.0"
django-bootstrap5 = "^23.4"
djangorestframework = "^3.14.0"
django-allauth = "^0.61.1"
django-cookiebanner = "^0.2.8"
whitenoise = "^6.6.0"
numpy = "^1.26.4"
endoreg-db = "^0.4"
django-admin-interface = "^0.28.8"
djlint = "^1.34.1"
python-dotenv = "^1.0.1"
django-redis = "^5.4.0"
django-celery-beat = "^2.6.0"
celery = "^5.4.0"
django-celery-results = "^2.5.1"
flower = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
